Generates CSV file

--- a/stats.ipynb
+++ b/stats.ipynb
@@ -12,35 +12,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "id": "385cd676",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'users_visits_' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m users_visits = pd.read_excel(\u001b[33m'\u001b[39m\u001b[33muser_visits.xlsx\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43musers_visits_\u001b[49m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'users_visits_' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "users_visits = pd.read_excel('user_visits.xlsx')\n",
-    "print(users_visits_)"
+    "relevant_data = [\"User ID\", \"First Name\", \"Last Name\", \"First Name\",\"Visited On\"]\n",
+    "users_visits = users_visits[users_visits.columns.intersection(relevant_data)]\n",
+    "users_visits = users_visits.reset_index()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1560e814",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "users = users_visits.drop_duplicates(\"User ID\")\n",
+    "users_table_columns = [\"User ID\", \"First Name\", \"Last Name\"]\n",
+    "users = users[users.columns.intersection(users_table_columns)]\n",
+    "users = users.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "id": "d31eaffd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "october_data = users_visits[(users_visits['date'] > '2013-01-01') & (users_visits['date'] < '2013-02-01')]\n"
+    "pd.options.mode.copy_on_write = True\n",
+    "october_data = users_visits[(users_visits[\"Visited On\"] >= \"2025-10-01\") & (users_visits[\"Visited On\"] <= \"2025-10-31\")]\n",
+    "october_data[\"Visits\"] = october_data.groupby(\"User ID\")[\"User ID\"].transform(\"count\")\n",
+    "october_data = october_data.drop_duplicates(\"User ID\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "6a267af4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted_data = october_data.sort_values(\"Visits\",ascending=False)\n",
+    "sorted_data.to_csv(\"Top_visitors.csv\",index=False,columns=[\"User ID\",\"First Name\",\"Last Name\",\"Visits\"])"
    ]
   }
  ],
@@ -60,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
