addded club statustics

--- a/stats.ipynb
+++ b/stats.ipynb
@@ -2,30 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "id": "c3bdf281",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "pd.options.mode.copy_on_write = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 39,
    "id": "385cd676",
    "metadata": {},
    "outputs": [],
    "source": [
     "users_visits = pd.read_excel('user_visits.xlsx')\n",
-    "relevant_data = [\"User ID\", \"First Name\", \"Last Name\", \"First Name\",\"Visited On\"]\n",
+    "relevant_data = [\"User ID\", \"Club ID\", \"Club Title\", \"First Name\", \"Last Name\", \"First Name\",\"Visited On\"]\n",
     "users_visits = users_visits[users_visits.columns.intersection(relevant_data)]\n",
     "users_visits = users_visits.reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "1560e814",
    "metadata": {},
    "outputs": [],
@@ -33,17 +34,21 @@
     "users = users_visits.drop_duplicates(\"User ID\")\n",
     "users_table_columns = [\"User ID\", \"First Name\", \"Last Name\"]\n",
     "users = users[users.columns.intersection(users_table_columns)]\n",
-    "users = users.reset_index()"
+    "users = users.reset_index()\n",
+    "\n",
+    "clubs = users_visits.drop_duplicates(\"Club ID\")\n",
+    "clubs_table_columns = [\"Club ID\", \"Club Title\"]\n",
+    "clubs = clubs[clubs.columns.intersection(clubs_table_columns)]\n",
+    "clubs = clubs.reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "d31eaffd",
+   "execution_count": 41,
+   "id": "653c6a5d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.options.mode.copy_on_write = True\n",
     "october_data = users_visits[(users_visits[\"Visited On\"] >= \"2025-10-01\") & (users_visits[\"Visited On\"] <= \"2025-10-31\")]\n",
     "october_data[\"Visits\"] = october_data.groupby(\"User ID\")[\"User ID\"].transform(\"count\")\n",
     "october_data = october_data.drop_duplicates(\"User ID\")"
@@ -51,13 +56,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 42,
+   "id": "d31eaffd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "october_data_clubs = users_visits[(users_visits[\"Visited On\"] >= \"2025-10-01\") & (users_visits[\"Visited On\"] <= \"2025-10-31\")]\n",
+    "october_data_clubs[\"Visits\"] = october_data_clubs.groupby(\"Club ID\")[\"Club ID\"].transform(\"count\")\n",
+    "october_data_clubs = october_data_clubs.drop_duplicates(\"Club ID\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "6a267af4",
    "metadata": {},
    "outputs": [],
    "source": [
     "sorted_data = october_data.sort_values(\"Visits\",ascending=False)\n",
     "sorted_data.to_csv(\"Top_visitors.csv\",index=False,columns=[\"User ID\",\"First Name\",\"Last Name\",\"Visits\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "815d67b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted_data_clubs = october_data_clubs.sort_values(\"Visits\",ascending=False)\n",
+    "sorted_data_clubs.to_csv(\"Top_Clubs.csv\",index=False,columns=[\"Club ID\",\"Club Title\",\"Visits\"])"
    ]
   }
  ],
