--- a/stats.ipynb
+++ b/stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "c3bdf281",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "id": "385cd676",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "id": "1560e814",
    "metadata": {},
    "outputs": [],
@@ -44,48 +44,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "id": "653c6a5d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "october_data = users_visits[(users_visits[\"Visited On\"] >= \"2025-10-01\") & (users_visits[\"Visited On\"] <= \"2025-10-31\")]\n",
-    "october_data[\"Visits\"] = october_data.groupby(\"User ID\")[\"User ID\"].transform(\"count\")\n",
-    "october_data = october_data.drop_duplicates(\"User ID\")"
+    "monthly_data = users_visits[(users_visits[\"Visited On\"] >= \"2025-11-01\") & (users_visits[\"Visited On\"] <= \"2025-11-30\")]\n",
+    "monthly_data[\"Visits\"] = monthly_data.groupby(\"User ID\")[\"User ID\"].transform(\"count\")\n",
+    "monthly_data = monthly_data.drop_duplicates(\"User ID\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "d31eaffd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "october_data_clubs = users_visits[(users_visits[\"Visited On\"] >= \"2025-10-01\") & (users_visits[\"Visited On\"] <= \"2025-10-31\")]\n",
-    "october_data_clubs[\"Visits\"] = october_data_clubs.groupby(\"Club ID\")[\"Club ID\"].transform(\"count\")\n",
-    "october_data_clubs = october_data_clubs.drop_duplicates(\"Club ID\")"
+    "monthly_data_clubs = users_visits[(users_visits[\"Visited On\"] >= \"2025-10-01\") & (users_visits[\"Visited On\"] <= \"2025-10-31\")]\n",
+    "monthly_data_clubs[\"Visits\"] = monthly_data_clubs.groupby(\"Club ID\")[\"Club ID\"].transform(\"count\")\n",
+    "monthly_data_clubs = monthly_data_clubs.drop_duplicates(\"Club ID\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "id": "6a267af4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sorted_data = october_data.sort_values(\"Visits\",ascending=False)\n",
-    "sorted_data.to_csv(\"Top_visitors.csv\",index=False,columns=[\"User ID\",\"First Name\",\"Last Name\",\"Visits\"])"
+    "sorted_data = monthly_data.sort_values(\"Visits\",ascending=False)\n",
+    "sorted_data.to_csv(\"top_visitors.csv\",index=False,columns=[\"User ID\",\"First Name\",\"Last Name\",\"Visits\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "id": "815d67b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sorted_data_clubs = october_data_clubs.sort_values(\"Visits\",ascending=False)\n",
-    "sorted_data_clubs.to_csv(\"Top_Clubs.csv\",index=False,columns=[\"Club ID\",\"Club Title\",\"Visits\"])"
+    "sorted_data_clubs = monthly_data_clubs.sort_values(\"Visits\",ascending=False)\n",
+    "sorted_data_clubs.to_csv(\"top_clubs.csv\",index=False,columns=[\"Club ID\",\"Club Title\",\"Visits\"])"
    ]
   }
  ],
@@ -105,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
