variables for date

--- a/stats.ipynb
+++ b/stats.ipynb
@@ -14,6 +14,18 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "7a3cb2fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "initial_date = \"2025-12-01\"\n",
+    "final_date = \"2025-12-31\"\n",
+    "month = \"december\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "385cd676",
    "metadata": {},
    "outputs": [],
@@ -26,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "1560e814",
    "metadata": {},
    "outputs": [],
@@ -44,48 +56,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "653c6a5d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "monthly_data = users_visits[(users_visits[\"Visited On\"] >= \"2025-11-01\") & (users_visits[\"Visited On\"] <= \"2025-11-30\")]\n",
+    "monthly_data = users_visits[(users_visits[\"Visited On\"] >= initial_date) & (users_visits[\"Visited On\"] <= final_date)]\n",
     "monthly_data[\"Visits\"] = monthly_data.groupby(\"User ID\")[\"User ID\"].transform(\"count\")\n",
     "monthly_data = monthly_data.drop_duplicates(\"User ID\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d31eaffd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "monthly_data_clubs = users_visits[(users_visits[\"Visited On\"] >= \"2025-10-01\") & (users_visits[\"Visited On\"] <= \"2025-10-31\")]\n",
+    "monthly_data_clubs = users_visits[(users_visits[\"Visited On\"] >= initial_date) & (users_visits[\"Visited On\"] <= final_date)]\n",
     "monthly_data_clubs[\"Visits\"] = monthly_data_clubs.groupby(\"Club ID\")[\"Club ID\"].transform(\"count\")\n",
     "monthly_data_clubs = monthly_data_clubs.drop_duplicates(\"Club ID\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "6a267af4",
    "metadata": {},
    "outputs": [],
    "source": [
     "sorted_data = monthly_data.sort_values(\"Visits\",ascending=False)\n",
-    "sorted_data.to_csv(\"top_visitors.csv\",index=False,columns=[\"User ID\",\"First Name\",\"Last Name\",\"Visits\"])"
+    "sorted_data.to_csv(month+\"_top_visitors.csv\",index=False,columns=[\"User ID\",\"First Name\",\"Last Name\",\"Visits\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "815d67b7",
    "metadata": {},
    "outputs": [],
    "source": [
     "sorted_data_clubs = monthly_data_clubs.sort_values(\"Visits\",ascending=False)\n",
-    "sorted_data_clubs.to_csv(\"top_clubs.csv\",index=False,columns=[\"Club ID\",\"Club Title\",\"Visits\"])"
+    "sorted_data_clubs.to_csv(month+\"_top_clubs.csv\",index=False,columns=[\"Club ID\",\"Club Title\",\"Visits\"])"
    ]
   }
  ],
@@ -105,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
